# hf-analytics_calculadora_analitycs

./: .env.example  .gitignore  .pre-commit-config.yaml  .rscignore  README.md  alembic.ini  app.py  ejecucion.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 083b2d8c4255_initial.py
backend/: __init__.py  main.py  settings.py
backend/api/: __init__.py  errors.py  exports.py  new_projects.py  recompute.py  routes.py  rules.py  scenarios.py  schemas.py  varieties.py
backend/db/: __init__.py  audit.py  base.py  models.py  repos.py  seeds.py  session.py
backend/domain/: derived.py  enums.py  inputs.py
backend/logic/: __init__.py  calculos_variedades.py  crecimiento_hf.py  lag_matrix.py  nuevos_terceros.py  plantines.py  recambio.py  recompute.py  terceros_totales.py  totales.py
backend/shiny_app/: app.py  reactive_helpers.py  state.py  styles.css
docs/: description_proyecto.md  documentation.md  plan_replication.md
docs/architect/: architecture.md
docs/doc_guia/: ejecucion.md
docs/image/: imagen1.csv  imagen10.csv  imagen2.csv  imagen3.csv  imagen4.csv  imagen5.csv  imagen6.csv  imagen7.csv  imagen8.csv  imagen9.csv
docs/plan/: plan_maestro.md
docs/task/: tareas.md
frontend/: .npmrc  astro.config.mjs  package.json  pnpm-lock.yaml
scratch/: check_db.py  seed_db.py
scripts/: build.ps1  dev.ps1  inline_js.py  seed_dev_db.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_playwright_flow.py
tests/golden/: __init__.py  test_golden_imagen10_terceros_totales.py  test_golden_imagen8_recambio.py  (+2 more)
(+38 files in other folders)
